chore: improve type safety, add SearchAfter type and use dates instead of strings